# fabdb-python

./: .gitignore  README.md  pyproject.toml  requirements.txt
fabdb/: __main__.py  client.py  util.py
fabdb/cli/: __init__.py  models.py
fabdb/client/: __init__.py  client.py  extended.py  filtering.py  types.py
fabdb/tui/: __init__.py  app.css  card.css  card_list.css  card_search.py  deck_list.py  diff.py  style.css  types.py  widgets.py
